gl31-master/src/test/deca/lex/valid/sansobjet/if_simple.deca
// Description:
//    tests de programme correct lexicalement pour sans-objet
//
// Resultats:
//    Succes attendu
//
// Historique:
//    cree le 12/01/2021

{
    int a = 1;
    int b = 4;
    if(a == b){
        b = 2;
    }
}
