gl31-master/src/test/deca/lex/invalid/hellotest/chaine_backslash2.deca
// Description:
//    tests de programme incorrect lexicalement (3 backslash) pour hello-world
//
// Resultats:
//    ligne 10 : Erreur, backslash
//
// Historique:
//    cree le 07/01/2021

"backslash \\\ en trop"